Final version for round 1 revisions. -pmwh

--- a/cpbe.tex
+++ b/cpbe.tex
@@ -116,7 +116,7 @@ The formal process of choice poetic analysis, having been designed with operatio
 \begin{enumerate}
   \item \textbf{Goal Analysis}: Consider the player's mode(s) of engagement (e.g., role play, power play, etc.), and observe or assume the set of goals that influences their decisions. For a specific analysis, defining one or more player models (as prioritized set(s) of goals) is often sufficient.
   \item \textbf{Likelihood Analysis}: Review the options offered at the choice being analyzed, and note the full range of outcomes that those options might suggest to the player, as well as the outcomes they actually produce. Also note how likely each suggested outcome seems to be.
-  \item \textbf{Prospective Analysis}: Describe the impact of each \emph{suggested outcome} on each player goal. This gives an overall impression of how the choice will appear to the player as they encounter it, known as their \textbf{prospective impression}. Specific option/outcome patterns may be recognizable at this point.
+  \item \textbf{Prospective Analysis}: Describe the impact of each \emph{suggested outcome} on each player goal. This gives an overall impression of how the choice will appear to the player as they encounter it, known as their \textbf{prospective impression}. Option/outcome patterns are recognizable at this point.
   \item \textbf{Retrospective Analysis}: Review the \emph{actual} outcomes of each option, and describe their impacts on each player goal. This produces a picture of the \textbf{retrospective impression} that the choice will leave on the player once they observe an outcome. Pay close attention to any differences between suggested and actual outcomes. Again, specific patterns may be identifiable at this stage.
 \end{enumerate}
 These four steps produce tables of prospective and retrospective impression labels for each option, which can usually be used to answer specific questions about a choice (e.g., ``Which option will this type of player favor?'' or ``Will the player feel this is a difficult choice?'').
@@ -162,7 +162,7 @@ Although we do not believe in formalism as an ultimate goal of literary (or inte
 
 \section{Related Work}
 
-As already mentioned, this work builds on our previous work on the theory of choice poetics.
+This work builds on our previous work on the theory of choice poetics.
 %
 In particular, our paper ``Towards a Theory of Choice Poetics'' \citep{mawhorter2014towards} provides a concise summary of the aims of the theory and the phenomena that it attempts to explain, and Peter Mawhorter's dissertation \citeyear{mawhorter2016artificial} contains a chapter that provides a more detailed examination of the theory, including a walkthrough of the \emph{Papers, Please} example that we also present here.
 %
@@ -204,7 +204,7 @@ Broader research on moral choices in games includes examinations of their implem
 %
 Of course, research on the psychological effects of games, especially violent games, is quite popular, but has come to largely mixed conclusions \citep{ferguson2008school,ellithorpe2015moral}.
 %
-In fact, there is also interest in using video games to encourage better moral decision making \citep{kastarov2017training}
+In fact, there is also interest in using video games to encourage better moral decision making \citep{kastarov2017training}.
 
 
 \subsection{Coercion and Complicity}
@@ -248,7 +248,7 @@ These paths allow for the game to be a straightforward example of what happens w
 \begin{figure}[t]
   \centering
     \includegraphics[width=0.8\textwidth]{fig/froggit.png}
-    \caption{A screenshot from \emph{Undertale} showing the first random encounter of the game, in which a `Froggit' ``hops close,'' (note that aggression is implied via the convention of a random encounter but not via the game's text). The main options are ``fight,'' ``act,'' ``item,'' and ``mercy,'' the last of which is unconventional.}
+    \caption{A screenshot from \emph{Undertale} showing the first random encounter of the game, in which a `Froggit' ``hops close,'' (note that aggression is implied via the convention of a random encounter but not by the text). The options are ``fight,'' ``act,'' ``item,'' and ``mercy,'' the last of which is unconventional.}
     \label{fig:UT_froggit}
 \end{figure}
 
@@ -266,11 +266,13 @@ Although contrasting approaches to this choice across players of different skill
 
 The remaining subsections here describe the results of each of the analysis steps outlined in section \ref{sec:analysis_steps}, and how they differ both for two different player models and between initial and subsequent encounters with the choice.
 %
-Our first player model\footnote{A player model is defined as a specific set of prioritized goals, which makes it more specific than a `player type' as used in other literature, although our player models in this analysis roughly correspond to two popular `player types' identified in the literature (see the related work section).} (we'll call them the power player) is intended to model an experienced roleplaying game player, who is familiar with the conventions of the genre and who expects to be asked to fight their way to victory, collecting experience and gold along the way to gain power and overcome challenging bosses.
+Our first player model\footnote{In choice poetics, a player model is defined as a specific set of prioritized goals, which makes it more specific than a `player type' as used in other literature, although our player models in this analysis roughly correspond to two popular `player types' identified in the literature (see below).} (we'll call them the power player) is intended to model an experienced roleplaying game player, who is familiar with the conventions of the genre and who expects to be asked to fight their way to victory, collecting experience and gold along the way to gain power and overcome challenging bosses.
+%
+This power player model is grounded in the `Achievement' dimension of player motivation identified in \citep{hamari2014player}, which corresponds to the idea of `power play' as a mode of engagement \citep{mawhorter2014towards}.
 %
 Our second player model (we'll call them the story player) attempts to approximate someone who has little experience with roleplaying games and is interested in experiencing the story of \emph{Undertale}.
 %
-In terms of modes of engagement (cf. \cite{mawhorter2014towards}), these players model are focused on power play and avatar play respectively.
+This model is related to the dimension of player motivation that Hamari and Tuunanen identify as `Immersion,' and the `avatar play' mode of engagement from \citep{mawhorter2014towards}.
 
 \subsection{Goal Analysis}
 
@@ -283,7 +285,7 @@ We use the following set of goals, with the listed power/story priorities for ou
   \item Explore options (low/high)---Faced with a new game, both the power and story players are interested in figuring out what makes this game unique and what is possible within it, although for the power player this is secondary to other concerns. The `Mercy' menu especially, as an unconventional option, will attract interest.
   \item Behave consistently (low/low)---Both of our hypothetical players not only exhibit standard human biases towards consistent action (and justification of their past actions using future actions), but also recognize that in most game systems, rewards are reserved for extreme behavioral profiles. This goal does not trump others, but influences ambiguous cases.
 \end{itemize}
-Although these exact goal sets might not be those of any actual player, defined relative to each possible outcome of a random encounter, they do approximate common aspects of player psychology described within existing literature (e.g., the `Achievement' and `Immersion' dimensions from \cite{hamari2014player}).
+Although these exact goal sets might not be those of any actual player, they do approximate common aspects of player psychology described within existing literature (e.g., the `Achievement' and `Immersion' dimensions from \cite{hamari2014player}).
 %
 Any concerns about particular goals or their prioritization could always be investigated by contrasting results with yet another player model that differed from one of these in terms of the goal in question, and of course, were data on actual player goals available in some form, it could be used to define detailed player models for personalized or aggregate analysis.
 %
@@ -435,7 +437,7 @@ This analysis set out with the goal of understanding how two different player mo
 %
 After understanding the prospective option impressions involved for both initial and repeated iterations of this choice, we can see that the reward structure does indeed encourage power-focused and story-focused players to take different paths, and rewards them for doing so in different ways.
 %
-By deconstructing \emph{Undertale}'s repeated kill/spare choice using two generic player models, we have gotten some insight into how different players might be encouraged to explore the game differently, but of course there are other important choices in the game and quite a few mechanisms that help push players down one path or the other.
+By deconstructing \emph{Undertale}'s repeated kill/spare choice using two generic player models, we have gotten some insight into how different players might be encouraged to explore the game differently, but of course there are other important choices and mechanics in the game that help push players down one path or the other.
 
 
 
@@ -444,7 +446,7 @@ As explored in Hughes' review of the game and Müller's thesis \citep{hughes2015
 The moral dichotomy that it sets up through a carefully crafted choice that will separate its audience into opposing camps serves to underline this point and get players to think deeply about it as they attempt to justify their decisions to each other (see e.g., \cite{oh2016genocide} for an example of discussion within the player community).
 
 
-As stated previously, the value of choice poetics here is not that it produces some completely novel insight, but that it can explain the mechanisms behind narrative choices with more specificity.
+The value of choice poetics here lies in explaining the mechanisms behind such narrative choices with specificity.
 %
 For example, in Table \ref{tab:UT_option_summary}, we can see that for our story player model, both the fight and spare options are not purely good or bad: the fight option advances some low-priority goals, while the spare option hinders one.
 %
@@ -453,19 +455,19 @@ As a designer, if we wanted to tweak this choice to more strongly reinforce spar
 By the same token, the choice \emph{not} to do so makes the spare option more meaningful: the player actually has to make a sacrifice in order to access it, which potentially increases psychological attachment to that choice, and which might also heighten the player's sense of agency.
 
 
-These kind of detailed observations about individual outcomes are something that choice poetics enables naturally, whereas less formal analyses might not support such without extra consideration.
+These kind of detailed observations about individual outcomes are something that choice poetics enables naturally.
 %
-More specifically, choice poetics offers a mechanism whereby approaching a choice with a specific question (e.g., ``How do power and story players approach this choice differently?'') leads to formal descriptions of that choice that can be used to answer other questions (e.g., ``How would awarding XP for sparing monsters change this choice?'').
+In fact, choice poetics offers a mechanism whereby approaching a choice with a specific question (e.g., ``How do power and story players approach this choice differently?'') leads to formal descriptions of that choice that can be used to answer other questions (e.g., ``How would awarding XP for sparing monsters change this choice?'').
 %
-In the best case, those formal descriptions or the process of their production might naturally raise further questions that highlight as-yet-unconsidered issues with the design of a choice.
+In the best case, those formal descriptions or the process of their production raise further questions that highlight as-yet-unconsidered issues with the design of a choice.
 %
 For example, in this analysis, we noted in passing that the flee option is always dominated by one of the other options assuming the player has a certain level of skill.
 %
-That observation immediately prompts the question: how do different levels of difficulty affect the player's perception of this choice, which could be answered using further comparative analysis that introduced goals related to self-preservation and player models with different skill levels (which would be modelled using outcome likelihoods for taking damage and/or dying).
+That observation prompts the question: how do different levels of difficulty affect the player's perception of this choice, which could be answered using further comparative analysis that introduced goals related to self-preservation and player models with different skill levels (which could be modelled using outcome likelihoods for taking damage and/or dying).
 %
-Although there is not room here to carry out that analysis, the fact that our initial analysis suggests it is a good sign that choice poetics as a formal system can be a productive tool for engaging these kinds of analytical questions.
+Although there is not room here to carry out that analysis, the fact that our initial analysis suggests it is a good sign that choice poetics as a formal system can be a productive tool for these kinds of analytical projects.
 
-\begin{figure}[H]
+\begin{figure}[t]
   \includegraphics[width=\textwidth]{fig/papers-please-visa-choice.png}
   \caption{A screenshot from \emph{Papers, Please} showing the interface as the player decides whether or not to admit a traveler. The traveler in question claims that she was denied an entry permit but will be killed if turned away. At this point, the player may pursue further questioning or examine the details of the applicant's passport, but must eventually either approve or deny her entry visa.}
   \label{fig:PP_visa}
@@ -512,13 +514,18 @@ If results differ significantly from what we know about a choice, there are two 
 In this case, we think, based on other analyses and interviews with the game designer, that \emph{Papers, Please} uses ambiguity to encourage complicity, and through a formal analysis, we should be able to either back up that intuition or demonstrate why things do not actually work that way.
 
 
-Because of this process, our analysis is open to criticism of the choices of goals/priorities and of how it reasons about outcome likelihoods.
+Because choice poetics makes its assumptions about player motivations and perceived outcome likelihoods explicit these aspects of the analysis can be easily examined and criticized.
 %
-However, the most efficient means of dealing with such criticism is usually to expand the analysis or contrast it with a proposed alternative.
+In many cases, the most efficient means of dealing with such criticism is to expand the analysis or contrast it with a proposed alternative.
 %
-When the analysis agrees with other sources in its conclusions, the burden is on the critic to argue why a specific choice of goal priorities or outcome likelihoods is unrealistic, and demonstrate how that affects the overall argument put forward.
+When an analysis disagrees with other sources, the source of that disagreement is often differing assumptions about how players will perceive a choice or about how they will respond to the options offered.
 %
-Ideally, of course, such questions might also be settled by gathering more data about player perceptions of goals and outcomes, and choice poetics provides a framework for doing so (see \cite{mawhorter2015intentionally}).
+Making those assumptions explicit thus helps ground potential disagreements, and not only allows for stating disagreements clearly (e.g., ``I don't think that most players will place a high priority on acting ethically.'') but allows for alternative assumptions to be tested using an identical analytical process.
+
+
+When an analysis agrees with other sources in its conclusions, the burden is on the critic to argue why a specific choice of goal priorities or outcome likelihoods is unrealistic, and demonstrate how that affects the overall argument put forward.
+%
+Ideally, of course, such questions might also be settled by gathering real data about player perceptions of goals and outcomes, and choice poetics provides a framework for doing so (see \cite{mawhorter2015intentionally}).
 
 \begin{table}[H]
 \centering
@@ -602,7 +609,7 @@ However, except in a few special cases, there is no information provided about t
 %
 In cases where information is available, it is as likely to raise more suspicions as assuage them: The player is eventually asked to participate in a plot to overthrow the Arstotzkan government, and both sides of the conflict are presented as having questionable motives.
 %
-The player is thus not given many chances to form justify their beliefs about the truth of applicants' statements, and in some cases, is given extra reasons to doubt them.
+The player is thus not given many chances to justify their beliefs about the truth of applicants' statements, and in some cases, is given extra reasons to doubt them.
 %
 Of course, such blanket beliefs about future applicants based on past applicants are simple biases, not rational conclusions, because the applicants are independent of each other, but they would help assuage the player's conscience (or potentially inflame it if the evidence contradicted the player's assumptions).
 %
@@ -623,9 +630,9 @@ As with our \emph{Undertale} analysis, the conclusions we reach are the same as 
 At the same time, the level of detail we achieve enables us to answer further questions: \emph{how} exactly does ambiguity play a role in encouraging complicity in \emph{Papers, Please}, and \emph{what} changes in player mindset or choice specifics might lead to a different outcome?
 
 
-Having set out to understand how exactly \emph{Papers, Please} uses ambiguity to encourage complicity, we have used choice poetics to provide a detailed explanation of the mechanisms behind this design choice.
+Having set out to understand how exactly \emph{Papers, Please} uses ambiguity to encourage complicity, we have used choice poetics to provide a detailed explanation of the mechanisms behind this effect.
 %
-The comparison presented in \ref{tab:PP_options} shows that suspicion about the motives of petitioners is key to turning a dilemma into a more murky and lopsided choice.
+The comparison presented in Table \ref{tab:PP_options} shows that suspicion about the motives of petitioners is key to turning a dilemma into a more murky and lopsided choice.
 %
 From this detailed analysis, we can also see which aspects of the player's mindset are necessary for this effect to occur: The player model's goal of apprehending criminals is surprisingly irrelevant to the deconstruction of the dilemma, because the goal of providing for one's family pushes in the same direction and is more clearly established by the context of the decision.
 %
@@ -636,9 +643,9 @@ An anarchist player who believed that denying anyone entry was immoral (or at le
 
 \section{Conclusion}
 
-Through our analyses of \emph{Undertale} and \emph{Papers, Please}, we have demonstrated the concrete application of choice poetics to two very different choices.
+Through our analyses of choices from \emph{Undertale} and \emph{Papers, Please}, we have demonstrated the concrete application of choice poetics to two very different choices.
 %
-As already mentioned, the conclusions drawn here about both games have already been reached by others, which confirms that our analytical approach is leads to sound conclusions.
+As already mentioned, the conclusions drawn here about both games have already been reached by others, which confirms that our analytical approach leads to sound conclusions.
 %
 Relative to a typical close reading approach, choice poetics provides extra formal structure that encourages detailed observation and which can lead to secondary observations about the choice being analyzed.
 %
@@ -687,7 +694,7 @@ Of course, we will also continue examining games, and may come up with more exam
 \vspace{6pt} 
 
 % Supplementary material
-\supplementary{}
+\supplementary{None.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \authorcontributions{Conceptualization, all authors; Investigation, Peter Mawhorter, Carmen Zegura, Alex Gray, and Arnav Jhala; Writing--Original Draft Preparation, Peter Mawhorter, Carmen Zegura, and Alex Gray; Writing--Review \& Editing, Peter Mawhorter and Noah Wardrip-Fruin.}
