Updated for final draft, including new figure screenshots and various text fixes.
-Peter Mawhorter

--- a/references.bib
+++ b/references.bib
@@ -2212,7 +2212,8 @@ year={2010}
   journal={Transactions of the Digital Games Research Association},
   volume={1},
   number={2},
-  year={2014}
+  year={2014},
+  pages={29--53}
 }
 
 % Survey on players making good/evil choices. More evil in second playthrough;
@@ -2965,7 +2966,7 @@ abstract = { The goal of this study is to support game designers in the selectio
   author={oh},
   title={{``Genocide the best ending?'' Steam Community thread}},
   year={2016},
-  month={03},
+  month={3},
   url={https://steamcommunity.com/app/391540/discussions/0/392185054118254079/},
   urldate={2018-08-16},
   howpublished={Online; \href{https://steamcommunity.com/app/391540/discussions/0/392185054118254079/}{\nolinkurl{https://steamcommunity.com/app/391540/discussions/0/392185054118254079/}}; accessed 2018-08-16.}
